# patient-encounter-api

./: .gitignore  README.md  pyproject.toml
src/encounter_api/: __init__.py  auth.py  config.py  dependencies.py  errors.py  logging_config.py  main.py  models.py  repository.py  service.py  timeutils.py
src/encounter_api/routes/: __init__.py  audit.py  encounters.py
tests/: conftest.py  test_encounter_roundtrip.py  test_phi_redaction.py  test_schema_validation.py
